syntax = "proto3";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";


message SmsApiSaveRequest {
    string provider = 1;
    SSmsApi api = 2;
}

//  登录结果
message SuperLoginResponse {
    int32 err_code = 1;
    string err_msg = 2;
    int32 role = 3;
}
message BoardHookSaveRequest {
    string hook_url = 1;
    string token = 2;
}


message AreaStringRequest {
    int32 province = 1;
    int32 city = 2;
    int32 district = 3;
}
message AreaListResponse {
    repeated SArea value =  1;
}
message StringListResponse {
    repeated string value =  1;
}
message GetAreaNamesRequest {
    repeated sint32 value =  1;
}

message UserPwd {
    string user = 1;
    string pwd = 2;
}

// 单点登录应用
message SSsoApp {
    // 编号
    sint32 id = 1;
    // 应用名称
    string name = 2;
    // API地址
    string api_url = 3;
    // 密钥
    string token = 4;
}

/** 行政区域 */
message SArea {
    sint32 code = 1;
    sint32 parent = 2;
    string name = 3;
}

/** 短信接口信息 */
message SSmsApi {
    /** 接口地址 */
    string api_url = 1;
    /** 接口KEY */
    string key = 2;
    /** 接口密钥 */
    string secret = 3;
    /** 请求数据,如: phone={phone}&content={content}*/
    string params = 4;
    /** 请求方式, GET或POST */
    string method = 5;
    /** 编码 */
    string charset = 6;
    /** 签名 */
    string signature = 7;
    /** 发送成功，包含的字符，用于检测是否发送成功 */
    string success_char = 8;
}

// 移动应用配置
message SMobileAppConfig {
    // 应用名称
    string app_name = 1;
    // APP图标地址
    string app_icon = 2;
    // 描述
    string description = 3;
    // 安卓APP版本
    string android_version = 4;
    // 安卓APP版发布地址
    string android_release_url = 5;
    // 苹果APP版本
    string ios_version = 6;
    // 苹果APP版发布地址
    string ios_release_url = 7;
    // 模板文件
    string show_tpl_path_ = 8;
}

message SWxApiConfig {
    //APP ID
    string app_id = 1;
    //APP 密钥
    string app_secret = 2;
    //通信密钥
    string mp_token = 3;
    //通信AES KEY
    string mp_aes_key = 4;
    //原始ID
    string ori_id = 5;

    /**===== 用于微信支付 =====**/

    //商户编号
    string mch_id = 6;
    //商户接口密钥
    string mch_api_key = 7;
    //微信支付的证书路径(上传)
    string mch_cert_path = 8;
    //微信支付的证书公钥路径(上传)
    string mch_cert_key_path = 9;
    //是否启用红包功能
    bool red_pack_enabled = 10;
    //红包金额限制
    double red_pack_amount_limit = 11;
    //红包每日数量限制
    int32 red_pack_day_time_limit = 12;
}

message PaymentPlatformResponse {
    repeated PaymentPlatform value =  1;
}

message PaymentPlatform {
    string id = 1;
    string name = 2;
    string sign = 3;
    repeated BankItem items = 4;
}

message BankItem {
    //标识
    string id = 1;
    //名称
    string name = 2;
    //签名/别名
    string sign = 3;
}

// 全局商户销售设置
message SGlobMchSaleConf {
    // !商户订单结算模式
    //MchOrderSettleMode enum.MchSettleMode
    // !商户订单结算比例
    //MchOrderSettleRate float32
    // 商户交易单是否需上传发票
    //TradeOrderRequireTicket bool
    // 是否启用分销模式
    bool fx_sales_enabled = 1;
    // 返现比例,0则不返现
    double cash_back_percent = 2;
    // 一级比例
    double cash_back_tg1_percent = 3;
    // 二级比例
    double cash_back_tg2_percent = 4;
    // 会员比例
    double cash_back_member_percent = 5;

    // 自动设置订单
    int32 auto_setup_order = 6;
    // 订单超时分钟数
    int32 order_time_out_minute = 7;
    // 订单自动确认时间
    int32 order_confirm_after_minute = 8;
    // 订单超时自动收货
    int32 order_time_out_receive_hour = 9;
}